; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_mcast_user.c_mcast_user_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_mcast_user.c_mcast_user_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mcast_data = type { %struct.sockaddr_in* }
%struct.sockaddr_in = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mcast_user_write(i32 %0, i8* %1, i32 %2, %struct.mcast_data* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.mcast_data*, align 8
  %9 = alloca %struct.sockaddr_in*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.mcast_data* %3, %struct.mcast_data** %8, align 8
  %10 = load %struct.mcast_data*, %struct.mcast_data** %8, align 8
  %11 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %10, i32 0, i32 0
  %12 = load %struct.sockaddr_in*, %struct.sockaddr_in** %11, align 8
  store %struct.sockaddr_in* %12, %struct.sockaddr_in** %9, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load %struct.sockaddr_in*, %struct.sockaddr_in** %9, align 8
  %17 = call i32 @net_sendto(i32 %13, i8* %14, i32 %15, %struct.sockaddr_in* %16, i32 4)
  ret i32 %17
}

declare dso_local i32 @net_sendto(i32, i8*, i32, %struct.sockaddr_in*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
